Updated Data Checkpoint

--- a/DataCheckpoint_Group142-FA24.ipynb
+++ b/DataCheckpoint_Group142-FA24.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To what extent can agroclimatological features, as measured by the Regional NASA POWER DAV (Prediction of Worldwide Energy Resource) Tool, predict future volatility in cocoa futures and market prices, with a focus on the COCO Wisdom Tree and CCc1 spread, using historical data from March 1st 2024 to October 15th 2024."
+    "To what extent can agroclimatological features, as measured by the Regional NASA POWER DAV (Prediction of Worldwide Energy Resource) Tool, predict future volatility in cocoa futures and market prices, with a focus on the COCO Wisdom Tree and CCc1 spread, using historical data from March 1st 2024 to October 15th 2024.\n",
+    "\n",
+    "Note: While examining the COCO Wisdom Tree and CCc1 spread is an interesting approach, it might limit the generalizability of the findings. We intend to expand this analysis by including a wider range of cocoa futures contracts and market indices to assess the generalizability of the results. However, due to losing access to the Refinitive token, we are currently unable to include additional market indices and futures contracts. We plan to incorporate these variables in the future once access is restored."
    ]
   },
   {
@@ -120,31 +122,31 @@
     "### Feature Overview\n",
     "\n",
     "#### NASA Agroclimatological Data\n",
-    "| **Variable**                  | **Description**                                                                 | **Type**        | **Time Frequency** |\n",
-    "|-------------------------------|---------------------------------------------------------------------------------|-----------------|--------------------|\n",
-    "| **DATE**                      | Daily records from March 1st, 2024, to October 15th, 2024                        | DateTime            | Daily              |\n",
-    "| **Station_ID**                | The Geographical location at which the data is from based on Lon & Lat           | Categorical      | Daily              |\n",
-    "| **LAT**                       | The latitude at which the data is from                                           | Categorical      | Daily              |\n",
-    "| **LON**                       | The longitude at which the data is from                                          | Categorical      | Daily              \n",
-    "| **Soil_Moisture**             | Daily soil moisture levels in cocoa-growing regions                              | Numeric (%)      | Daily              |\n",
-    "| **Temp_Avg**                  | Daily average temperatures in key regions                                        | Numeric (°C)     | Daily              |\n",
-    "| **Temp_Max**                  | Daily maximum temperature in key regions                                         | Numeric (°C)     | Daily              |\n",
-    "| **Temp_Min**                  | Daily minimum temperature in key regions                                         | Numeric (°C)     | Daily              |\n",
-    "| **Earth_Skin_Temp**           | The temperature of the Earth's surface 10m below ground level                    | Numeric (°C)     | Daily              |\n",
-    "| **Rel_Humidity**              | Daily humidity levels in cocoa-growing regions 2m above ground level             | Numeric (%)      | Daily              |\n",
-    "| **Root_Soil_Wetness**         | Daily soil moisture levels in cocoa-growing regions 10m below ground level       | Numeric (%)      | Daily              |\n",
-    "| **Precip_Corrected**          | Daily precipitation levels in key cocoa-producing regions (Ivory Coast)          | Numeric (mm)     | Daily              |\n",
+    "| **Variable**                  | **Description**                                                                 | **Type**        | **Time Frequency** | **Usage in Research**                                                                                                                                                      |\n",
+    "|-------------------------------|---------------------------------------------------------------------------------|-----------------|--------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| **DATE**                      | Daily records from March 1st, 2024, to October 15th, 2024                        | DateTime        | Daily              | Used to correlate daily weather patterns with cocoa futures price movements to establish time-based relationships between weather and market volatility.                     |\n",
+    "| **Station_ID**                | The Geographical location at which the data is from based on Lon & Lat           | Categorical     | Daily              | Helps identify regional patterns that may influence cocoa price volatility based on geographical weather and market conditions, focusing on key cocoa-producing regions.      |\n",
+    "| **LAT**                       | The latitude at which the data is from                                           | Categorical     | Daily              | Provides context for climate-related patterns that may impact specific cocoa-growing regions, aiding in regional forecasting of price volatility.                           |\n",
+    "| **LON**                       | The longitude at which the data is from                                          | Categorical     | Daily              | Similar to **LAT**, used to identify geographical influences on climate and, indirectly, market price changes, by linking them to specific cocoa-growing locations.           |\n",
+    "| **Soil_Moisture**             | Daily soil moisture levels in cocoa-growing regions                              | Numeric (%)     | Daily              | Used to assess soil health, which can influence cocoa production. Soil moisture changes can predict yield changes, directly impacting cocoa price volatility and market trends. |\n",
+    "| **Temp_Avg**                  | Daily average temperatures in key regions                                        | Numeric (°C)    | Daily              | Temperature trends can signal shifts in climate conditions that may affect cocoa harvests, which in turn affect cocoa futures prices.                                        |\n",
+    "| **Temp_Max**                  | Daily maximum temperature in key regions                                         | Numeric (°C)    | Daily              | High temperature extremes can signal potential climate stress on cocoa production, correlating to sudden spikes or drops in cocoa market prices.                           |\n",
+    "| **Temp_Min**                  | Daily minimum temperature in key regions                                         | Numeric (°C)    | Daily              | Used to track temperature fluctuations, which may influence cocoa yields and lead to volatility in market prices if the region experiences significant temperature shifts.    |\n",
+    "| **Earth_Skin_Temp**           | The temperature of the Earth's surface 10m below ground level                    | Numeric (°C)    | Daily              | Ground-level temperatures impact soil conditions and crop growth, which are essential to understanding the relationship between climate and cocoa market behavior.           |\n",
+    "| **Rel_Humidity**              | Daily humidity levels in cocoa-growing regions 2m above ground level             | Numeric (%)     | Daily              | Humidity levels affect the growth and quality of cocoa crops, with high or low humidity levels potentially affecting yields and thereby impacting cocoa price volatility.    |\n",
+    "| **Root_Soil_Wetness**         | Daily soil moisture levels in cocoa-growing regions 10m below ground level       | Numeric (%)     | Daily              | Deeper soil moisture levels are key indicators of soil health, which in turn affects cocoa yield and price volatility as they reflect the longer-term climate trends.         |\n",
+    "| **Precip_Corrected**          | Daily precipitation levels in key cocoa-producing regions (Ivory Coast)          | Numeric (mm)    | Daily              | Precipitation data is directly linked to crop growth and health, providing key information to predict potential disruptions in cocoa production and related price volatility. |\n",
     "\n",
     "\n",
     "#### Historic Daily Cocoa Futures Data\n",
-    "| **Variable**                  | **Description**                                                                 | **Type**        | **Time Frequency** |\n",
-    "|-------------------------------|---------------------------------------------------------------------------------|-----------------|--------------------|\n",
-    "| **DATE**                      | Daily records from March 1st, 2024, to October 15th, 2024                        | DateTime          | Daily            |\n",
-    "| **HIGH**                      | Daily max price of cocoa futures contracts                                       | Numeric (USD)    | Daily              |\n",
-    "| **LOW**                       | Daily min price of cocoa futures contracts                                       | Numeric (USD)    | Daily              |\n",
-    "| **OPEN**                      | Daily opening price of cocoa futures contracts                                   | Numeric (USD)    | Daily              |\n",
-    "| **CLOSE**                     | Daily closing price of cocoa futures contracts                                   | Numeric (USD)    | Daily              |\n",
-    "| **VOLUME**                    | Daily volume of cocoa futures traded                                             | Numeric          | Daily              |"
+    "| **Variable**                  | **Description**                                                                 | **Type**        | **Time Frequency** | **Usage in Research**                                                                                                                                                 |\n",
+    "|-------------------------------|---------------------------------------------------------------------------------|-----------------|--------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| **DATE**                      | Daily records from March 1st, 2024, to October 15th, 2024                        | DateTime        | Daily              | Used to match historical cocoa futures price data with agroclimatological data to analyze the relationship between climate conditions and market volatility.           |\n",
+    "| **HIGH**                      | Daily max price of cocoa futures contracts                                       | Numeric (USD)   | Daily              | Analyzed to identify price peaks that could correlate with extreme weather events, helping to assess how temperature and precipitation volatility affect cocoa prices.   |\n",
+    "| **LOW**                       | Daily min price of cocoa futures contracts                                       | Numeric (USD)   | Daily              | Used alongside **HIGH** to evaluate daily price fluctuations and volatility, allowing for comparisons with climate stress factors.                                      |\n",
+    "| **OPEN**                      | Daily opening price of cocoa futures contracts                                   | Numeric (USD)   | Daily              | Opening price data provides insight into market reactions to overnight weather data, with potential links to sudden climate-related price adjustments.                 |\n",
+    "| **CLOSE**                     | Daily closing price of cocoa futures contracts                                   | Numeric (USD)   | Daily              | Key for tracking daily market behavior, comparing how daily weather conditions (temperature, humidity, soil moisture) correlate with closing market prices.            |\n",
+    "| **VOLUME**                    | Daily volume of cocoa futures traded                                             | Numeric         | Daily              | Analyzed to assess market sentiment in relation to weather data, identifying trends in trading activity that could correlate with anticipated climate impacts on cocoa. |"
    ]
   },
   {
@@ -1551,7 +1553,7 @@
     "| 11/6 | 6:30PM - 8:30PM | - Get new weather data <br> - Finish Data Checkpoint <br> - Update corrilation Map <br> - Vet cocoa data | - EDA analysis as a team <br> - Cleaned data for NASA and Cocoa closing prices <br> - created scripts to clear outputs for notebooks|\n",
     "| 11/8 | 4PM - 5:30PM | - Fix time breakdown for CC1 | - EDA analysis as a team per stations (3D gradiend maps)  |\n",
     "| 11/13 | 6:30PM - 8:30PM | - Fix time breakdown for CC1 | - Update goals for next meeting <br> - Finish DataCheckpoint  |\n",
-    "| 11/8 | 4PM - 5:30PM | - Get refinitive access <br> - Find price commodity data for cocoa <br> - Test prediction model to see if viable for project  | - Discuss   |"
+    "| 11/20 | 6:30PM - 8:30PM | - Get refinitive access <br> - Find price commodity data for cocoa <br> - Test prediction model to see if viable for project  | - Discuss   |"
    ]
   }
  ],
