Updated Final Project

--- a/FinalProject_Group142-FA24.ipynb
+++ b/FinalProject_Group142-FA24.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "# Abstract\n",
     "\n",
-    "Please write one to four paragraphs that describe a very brief overview of why you did this, how you did, and the major findings and conclusions."
+    "We looked at the causes and relationships between various agroclimatological factors and volatility in cocoa futures prices, focusing on the specific metrics of the COCO Wisdom Tree and CCc1 spread. Observing the high volatility of cocoa futures prices, we aimed to investigate the role of environmental factors in driving these fluctuations. Our goal was to identify patterns and ways to aid stakeholders across the cocoa supply chain in understanding and predicting future volatility.\n",
+    "Our analysis involved gathering agroclimatological data from the NASA POWER DAV tool, combined with past cocoa futures data. We divided the climate data into geographic regions (stations) to pinpoint localized weather patterns and concurrently divided the cocoa futures into separate time periods to observe how prices changed over time. We conducted a series of analysis in order to identify these trends and later presented our findings in a clear and intuitive way.\n",
+    "Our findings were able to show a strong positive correlation between temperature and cocoa prices which tells us that higher temperatures may lead to an increase in price volatility. Similarly, we were also able to observe a strong negative correlation between soil moisture and market prices; poor growing conditions were linked to higher prices due to supply constraints. Moreover, we concluded that early contracts are more sensitive to climatic variations, while later contracts show market stabilization as long-term supply expectations are priced in. Overall, we concluded that temperature and soil moisture are critical predictors of cocoa market volatility."
    ]
   },
   {
@@ -73,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Refrences\n",
+    "# References\n",
     "1. \"Cacao Currency: Ancient Civilizations Used Chocolate as Cash.\" *Chocolate Class*, 24 Mar. 2020, [https://chocolateclass.wordpress.com/2020/03/24/cacao-currency-ancient-civilizations-used-chocolate-as-cash/](https://chocolateclass.wordpress.com/2020/03/24/cacao-currency-ancient-civilizations-used-chocolate-as-cash/).\n",
     "\n",
     "2. *Cocoa Trading.* Markets.com, [https://www.markets.com/education-centre/cocoa-trading/](https://www.markets.com/education-centre/cocoa-trading/).\n",
@@ -1196,13 +1198,47 @@
    "source": [
     "# Discusison and Conclusion\n",
     "\n",
-    "Wrap it all up here.  Somewhere between 3 and 10 paragraphs roughly.  A good time to refer back to your Background section and review how this work extended the previous stuff. \n",
+    "Cocoa futures form the foundation of both, farming and manufacturing.This is seen in a number of entities involved in the production and production of cocoa. First of all, because cocoa futures protect farmers from price drops, which could negatively affect how they make a living, they provide income stability. If rising cocoa prices cause output to become unstable, manufacturers also bear the effects, as this can result in higher costs and unstable product pricing and distribution. We think that in order for all parties involved in the cocoa supply chain to make wise choices about production, pricing, and/or distribution, it is essential to be able to forecast this market volatility.\n",
+    "The goal of this study was to find out how well certain agroclimatological features could forecast future volatility in cocoa futures and market prices. Two important metrics, the CCc1 spread and the COCO Wisdom Tree, were the focus of our investigation. These metrics are significant because they provide insight into the short term market volatility and the broader market structure of the cocoa industry. To properly examine this, we used historical data spanning seven months.\n",
+    "\n",
+    "We were able to identify significant relationships between agroclimatological factors and cocoa price volatility, just as we originally hypothesized. A strong positive correlation between temperature and cocoa prices was found that suggests elevated temperatures indicate stress on cocoa crops. This crop stress most commonly occurs during critical growing periods which leads to less crop yields. As a result, farmers can become worried about supply shortages, propelling market volatility and price increases. Poor soil moisture suggests unfavorable growing conditions, which can be associated with droughts or water scarcity, which can eventually lead to a decline in crop health and a shortage of supply, which leads to higher pricing. We also can see a clear difference in how market contracts respond to changes in weather patterns. We concluded that early contracts are more prone to agroclimatological changes; the market responds to immediate instabilities and fluctuations in crop production. In contrast, later contracts show signs of market stabilization. We think this is likely the result of long term supply expectations and/or additional economic or climatic patterns that were factored into the pricing over time.\n",
+    "\n",
+    "Bridging back to the importance of why we decided to focus on COCO Wisdom Tree and CCc1 spread, these were chosen as the focal market metrics. The COCO Wisdom Tree, being a traded product that tracks cocoa futures prices, particularly simplifies market behavior analyses and supplies us with a clearer understanding of the overall trends in the market. The CCc1 spread metric, which is the price difference between two cocoa futures contracts, explains the changes in supply and demand expectations over time. And so, the interplay of these two metrics helps us quantify and better understand the relationships between agroclimatological factors and how they influence market instabilities.\n",
+    "\n",
+    "Combining the climate data from the NASA POWER DAV tool and the cocoa futures data was a strategic move on our part because it allowed us to link environmental data patterns to market fluctuations. Merging these datasets helped us establish a temporal relationship between climatic events and price changes. We achieved this by aligning both datasets by date to directly compare daily climate conditions with cocoa price trends. To do this, we divided the climate data into geographic/spatial regions called stations to identify localized weather patterns, and then we divided the futures data into time periods called separations to observe identifiable and recurring patterns. As a result, we produced a merged dataset that provided a holistic overview, connecting agroclimatological factors to both short and long term price spikes and market stabilization. We acknowledged the limitations of this approach, particularly the time frame, which leaves room for improvement since we chose a 7 month period. This duration does not capture the entire ENSO cycle or other significant events, which were initially of interest for this project but were difficult to analyze due to the data available. We lacked access to some other futures contracts, which could have provided a more comprehensive perspective.\n",
+    "\n",
+    "To conclude, we now understand the critical importance of agroclimatological factors in shaping market behavior, which is essential for building a resilient cocoa supply chain. Cocoa is known to be highly sensitive to various climatic, agricultural, and weather factors, making this analysis especially relevant in our present day. As climate change continues to escalate, it directly harms agricultural systems, creating disruptions that ripple through the global economy. By understanding these interactions and patterns, we can not only help stakeholders in the cocoa industry anticipate and mitigate risks but also contribute to future efforts toward sustainability and strategic planning.\n",
     "\n",
     "\n",
     "# Team Contributions\n",
     "\n",
-    "Speficy who did what.  This should be pretty granular, perhaps bullet points, no more than a few sentences per person."
+    "| Meeting Date | Meeting Time | Completed Before Meeting | Discuss at Meeting |\n",
+    "|:------------:|:------------:|--------------------------|--------------------|\n",
+    "| 9/30  | 1PM | NA | - Project Overview <br> - Project Guidelines <br> - JupyterHub Setup <br> - Set up GitHub repository | \n",
+    "| 10/5  | 11AM - 12PM | - Review 3 previous projects <br> - Propose 3 project ideas each | - Reviewed project guidelines <br> - Discussed proposed projects <br> - Developed a plan for the next meeting | \n",
+    "| 10/7  | 5PM - 6PM | - Review 3 research papers (focus on referenced datasets) <br> - Identify 2-3 datasets for chosen topic | - Meet at Geisel <br> - Select the strongest project | \n",
+    "| 10/10 | 11AM - 12PM | - Consult with TA to review project plan <br> | - Research prior work for background section <br> |\n",
+    "| 10/12 | 11AM - 1PM | - Made list of data from NASA website to choose from <br> - Finish Project Proposal | - Decide on data to use for clearning <br>  \n",
+    "| 10/14 | 9AM - 10AM | - Finish Project Proposal | - Reframe Question to be more specific <br> - Gather data for clearning <br> |\n",
+    "| 10/16 | 9AM - 10AM | - Finish Project Proposal <br> - upload data to kaggle <br> - Gather data for clearning | - Explained the data gathered <br> - updates on background research <br> - Oceanic areas had missing data (NASA) |\n",
+    "| 10/21 | 6PM - 7PM | - Finish Project Proposal <br> - Data exploration | - Project Review <br> - explained gathered data <br> |\n",
+    "| 10/24 | 2:30PM - 3:30PM | - Clean Data | - Review Project Proposal  <br> - Create a task list for the analysis |\n",
+    "| 10/30 | 8AM - 9:30AM | - EDA weather data | - Discussed process moving forward <br> - Time series analysis (ultimate goal) |\n",
+    "| 11/6 | 6:30PM - 8:30PM | - Get new weather data <br> - Finish Data Checkpoint <br> - Update corrilation Map <br> - Vet cocoa data | - EDA analysis as a team <br> - Cleaned data for NASA and Cocoa closing prices <br> - created scripts to clear outputs for notebooks|\n",
+    "| 11/8 | 4PM - 5:30PM | - Fix time breakdown for CC1 | - EDA analysis as a team per stations (3D gradiend maps)  |\n",
+    "| 11/13 | 6:30PM - 8:30PM | - Fix time breakdown for CC1 | - Update goals for next meeting <br> - Finish DataCheckpoint  |\n",
+    "| 11/22 | 6:30PM - 8:30PM | - Get refinitive access <br> - Find price commodity data for cocoa <br> - Test prediction model to see if viable for project  | - Discuss   |\n",
+    "| 11/25 | 6:30PM - 8:30PM | - Ale: Finish the visualization for the Refinitiv Data and create a new detailed jupyter nb called \"Requests.ipynb\" where you describe all the different ways and methodologies for trading cocoa <br> - Jack: Add the descriptions and to the EDA and rationale for each statistical analysis and visualization <br> -Spandan: Work on all the statical analysis and the visualizations for the EDA  | - Finish EDA checkpoint|\n",
+    "| 12/3 | 6:30PM - 8:30PM | - Seema: finished abstract and conclusion and dicussion sections\n",
+    "| 12/10 | 7:00PM - 9:00PM | |- Record final video and finalize project"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
