Added video link

--- a/FinalProject_Group142-FA24.ipynb
+++ b/FinalProject_Group142-FA24.ipynb
@@ -19,6 +19,9 @@
     "- Seema Rida\n",
     "- Louis Alejandro Soumah\n",
     "\n",
+    "# Project Video\n",
+    "Click [here](https://drive.google.com/file/d/123gaVa3l35RN76-lOESgohdljZwcMdu_/view?usp=sharing) to view the project video!\n",
+    "\n",
     "# Abstract\n",
     "\n",
     "We looked at the causes and relationships between various agroclimatological factors and volatility in cocoa futures prices, focusing on the specific metrics of the COCO Wisdom Tree and CCc1 spread. Observing the high volatility of cocoa futures prices, we aimed to investigate the role of environmental factors in driving these fluctuations. Our goal was to identify patterns and ways to aid stakeholders across the cocoa supply chain in understanding and predicting future volatility.\n",
